Adicionando endpoint pagamento